--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!--
+  ~ Copyright (c) 2022.  BraveGrumpy.
+  ~ Do not reproduce contents without express written permission from the author.
+  ~ You can get permission by cloning the repository https://github.com/robin-zollner/bravegrumpy.website.git, and creating a new branch.
+  ~ Otherwise, you can email seacrestskylar@gmail.com, or join the discord server, linked within each page.
+  ~ The purpose of this website, is to practice responsive web design, and to publish creative writing.
+  -->
+
 <!DOCTYPE html>
 <html lang="en-us">
     <head>
@@ -12,7 +20,7 @@
         <ul>
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="helloWorld/helloWorld_html.html">Hello World Main</a></li>
-            <li class="helloWorld-dropdown">
+            <li class="dropdown">
                 <a href="javascript:void(0)" class="dropdown-button">Project Links</a>
                 <div class="dropdown-content">
                     <a href="helloWorld/Project-Link.html">Project 1</a>
@@ -32,6 +40,7 @@
                     <a href="err404.html">error404</a>
                 </div>
             </li>
+            <li><a href="Huetopia/index.html">Creative Writing</a></li>
         </ul>
     </nav>
         <div class="title" id="sec0">
