--- a/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
+++ b/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
@@ -59,8 +59,9 @@
             <!--li><a href="../index.html">BraveGrumpy Home</a> </li-->
             <li><a href="../../../index.html">Huetopia Homepage</a> </li>
             <li><a href="index.html">Character Profiles Home</a> </li>
-            <li><a href="attichaos-archibald.html">Atichaos Archibald</a> </li>
-            <li><a href="skylar-seacrest.html">Skykar Seacrest</a> </li>
+            <li><a href="attichaos-archibald.html">Attichaos Archibald</a></li>
+            <li><a href="skylar-seacrest.html">Skylar Seacrest</a></li>
+            <li><a href="#">Lytea[?]</a></li>
         </ul>
     </div>
 
