--- a/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
+++ b/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
@@ -127,21 +127,22 @@
                 <li>flying kites</li>                    
               </ul>
               <h3>If found in a coffee shop, what would he order, and what would he do?</h3>
-              <p></p>
+              <p>He would order a concentrated black coffee with a shot of whiskey and a peanut butter sandwich. You would likely see him with a laptop, drawing out schematics.</p>
               <h3>Food</h3>
-              <p></p>
+              <p>He LOVEs peanut butter. When students answer a question correctly in class, he tosses them a package of peanut butter cracker sandwiches. This is also so that he can be sure that nobody in the course will explicitly go hungry. His syllabus for undergraduate History 101 and 102 states that students should come to him if anything goes wrong with their meal plan or finances. It has yet to be used because the typical clientele of The Academy is relatively wealthy children of TriVerment generals.</p>
               <h3>Personality</h3>
-              <p></p>
+              <p>Atichaos is narcissistic. He must be the best at all he attempts. While his motivation was initially aligned with Triangular supremacy, it slowly shifted to personal superiority. While he will continue to teach history and be the best of it, his motivation for being so kind is that his students continually respect him.</p>
               <h3>Syllabus/Curriculum that he teaches</h3>
-              <p></p>
+              <p>He never fails to ensure everyone knows he was the modern Lite Brite tablet inventor. However, he always has an extra one for somebody who forgets theirs. Professor Arch pointedly ignores the existence of Songs of the Spirits. Most students are children of TriVerment officials so that they would be followers of the Great Artist Collective religion, so this omission is not apparent. The point is to lead people to believe there was no other religion. He teaches the Great Artist creation myths as religious myths of the region.</p>
               <h3>When Flirting</h3>
-              <p></p>
+              <p>Atti (alias when younger) would bite his lip to woo others to divulge information. This made people believe he was curious, innocent, and trustworthy. This worked when visiting one of the old circle tribes (different than the protagonist’s). He also could see the Lite Brite technique because of his charm.</p>
               <h3>Does he like pizza?</h3>
-              <p></p>
+              <p>No, but he provides pizza to his lecture every sixth day.</p>
               <h3>Did he ever like pizza?</h3>
-              <p></p>
+              <p>When Professor Arch was Atti, he mainly ate pizza, which was inexpensive and easy to obtain. Eventually, he learned that pizza has some slight-color sensitivity repression when chronically eaten in large quantities. (This is in the cheese. Color repression is only seen in significant amounts in experiments on bats. However, bats are also most likely to lose their color sensitivity because they can only sense colors in the blue range. Humanoids do not know this, but they can see that they are not as good at color magic as their counterparts).</p>
+              <p>This tool keeps students fed and dependent on the LiteBrite tablets instead of using paint to access their innate abilities.</p>
               <h3>How does he get to work?</h3>
-              <p></p>
+              <p>Atichaos Archibald has two residences. One residence is a manor in the fields of Linaria. He spends off-seasons there, and this is where he will take meetings with TriVerment officials. He also has a flat in the classy part of downtown, a 10-minute stroll from his office and a 15-minute walk from the lecture hall he most often teaches in. On the way to work, he stops at a café each morning and gets a cup of hot black coffee and a croissant. (Of course, this is different than what he would typically get at a café in Linaria)</p>
           </div>
       </div>
   
