--- a/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
+++ b/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
@@ -68,16 +68,20 @@
       <div class="col-s-9 col-m-6 center">
           <div class="section">
               <h2>Atichaos Archibald</h2>
-              <h3>Aliases</h3>
-              <ul>
-                  <li>The Whisperer</li>
-                  <li>Harrowing</li>
-                  <li>Professor Arch</li>
-                  <li>Atti</li>
-              </ul>
-              <h3>Age</h3>
-              <p>72, but nobody truly knows</p>
-              <h3>What others think of Atti</h3>
+              <div class="subsection">
+                <h3>Aliases</h3>
+                <ul>
+                    <li>The Whisperer</li>
+                    <li>Harrowing</li>
+                    <li>Professor Arch</li>
+                    <li>Atti</li>
+                </ul>
+              </div>
+              <div class="subsection">
+                <h3>Age</h3>
+                <p>72, but nobody truly knows</p>
+              
+                <h3>What others think of Atti</h3>
               <p>
                 <ul>
                     <li>Boisterous</li>
@@ -148,8 +152,9 @@
   
       <div class="col-s-12 col-m-3 right">
           <div class="aside">
-              <h2>Logline</h2>
-              <p>Enter a world full of bright colors and geometric geometries, where the politics of the past inform the leaders' decisions while oblivous to the ancient magic forces stirring.</p>
+              <h2>Character Role</h2>
+              <p>Attichaos Archibald takes the role of the mentor, kicking the <a href="#">protagonist</a> into going on an adventure.</p>
+              <p>He will follow the trope "Secretly Evil Mentor", as he is actually really supportive, but is ulitmatiely working for the <a href="#">TriVerment</a> while the protagonists of this story are going to end up working in tandem with the <a href="#">Ancient Artists' Temple</a></p>
               <h2>Dramatic Question</h2>
               <p>Will a group of graduate students complete a quest to understand their history and make an informed decision about continuing to live in their previously invisible utopia?</p>
           </div>
