--- a/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
+++ b/Huetopia/content/writing-preparation/character-profiles/attichaos-archibald.html
@@ -190,6 +190,11 @@
                     <h2>Character Role</h2>
                     <p>Attichaos Archibald takes the role of the mentor, kicking the <a href="#">protagonist</a> into going on an adventure.</p>
                     <p>He will follow the trope <a href="https://youtu.be/XXi8_1Pka1Y?t=271" target="_blank">"Secretly Evil Mentor"</a>, as he is actually really supportive, but is ulitmatiely working for the <a href="#">TriVerment</a> while the protagonists of this story are going to end up working in tandem with the <a href="#">Ancient Artists' Temple</a></p>
+                    <h2>Within Book One</h2>
+                    <p>Witin the first book, the characters may almost see him as a classic mentor, but with better things to do.</p>
+                    <p>He won't be in the story, solving the problems becasue this a thesis assignment, so he won't be very helpful. It's not like he is going on the trip with us.</p>
+                    <p>I hope to have a book 2, that will focus in on his hero's journey.</p>
+                    <p>While he is an <em>antagonist</em>, he isn't truly a villian, even if he looks like one.</p>
                 </div>
             </div>
         </div>
